aws/nat-route-table-backup.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-03d5560d1500f9043",
                    "RouteTableId": "rtb-03c8358d10505c7a5",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-03c8358d10505c7a5",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.26.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "NatGatewayId": "nat-012b2e779fc496879",
                    "Origin": "CreateRoute",
                    "State": "active"
                },
                {
                    "DestinationPrefixListId": "pl-63a5400a",
                    "GatewayId": "vpce-028ace025b9b5f32f",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-0f27cba446a3b734d",
            "OwnerId": "170292442142"
        }
    ]
}
